# recipe-api/server.js
@@ -49,13 +49,13 @@ passport.deserializeUser((user, done) => {
 
 app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged Out") });
 
-app.get('/github/callback', passport.authenticate('github', {
-  failureRedirect: '/api-docs', session: false
-}),
-  (req, res) => {
-    req.session.user = req.user;
-    res.redirect('/');
-  });
+//app.get('/github/callback', passport.authenticate('github', {
+  //failureRedirect: '/api-docs', session: false
+//}),
+  //(req, res) => {
+    //req.session.user = req.user;
+    //res.redirect('/');
+  //});
 
 //app.use('/recipes', require('./routes/recipesRoute'));
 
